--- a/styles/scss/home/home.scss
+++ b/styles/scss/home/home.scss
@@ -1,4 +1,43 @@
 @import "../globals.scss";
+@import "../animations/animations.scss";
+
+
+body {
+  height: 100%;
+  overflow-y: hidden;
+  animation: disable-scroll 0.1s ease-in-out 4s forwards ;
+}
+
+.spinner-container {
+  position: absolute;
+  top: calc(50vh - 40px);
+  left: calc(50vw - 40px);
+  z-index: 2000;
+
+  .spinner {
+    @include on-circle(10, 80px, 10px);
+  
+    div {
+      opacity: 0.1;
+      border-radius: 50%;
+      background-color: white;
+      @include apply-spinner(10);
+    }
+  }
+
+  animation: spinner-fade-out 2s ease-in-out 2s forwards ;
+}
+
+.spinner-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1000;
+  background-color: black;
+  animation: spinner-fade-out 2s ease-in-out 2s forwards ;
+}
 
 .header {
   width: 100%;
@@ -55,13 +94,35 @@
     }
   
     .cta {
+      position: relative;
       width: fit-content;
       cursor: pointer;
-      padding: 15.5px 22.5px;
       border-radius: 25px;
       background: linear-gradient(193.33deg, $colorPrimary_5 -11.44%, $colorPrimary_6 123.93%);
       box-shadow: 0 4px 10px 0 $colorShadow_2;
       @include styleP("medium", $colorGreyscale_5, $font_1_regular);
+
+      .overlay {
+        border-radius: 25px;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: $colorGreyscale_5;
+        opacity: 0;
+        transition: opacity 150ms ease-in-out;
+      }
+
+      p {
+        padding: 15.5px 22.5px;
+      }
+
+      &:hover {
+        box-shadow: 0px 4px 15px 0px #00000059;
+
+        .overlay {
+          opacity: 0.15;
+        }
+      }
     }
   }
 
@@ -100,7 +161,7 @@
   padding: 50px 0;
   gap: 25px;
 
-  .title {
+  .section-title {
     @include styleH("h3");
     font-weight: 700;
   }
@@ -111,8 +172,7 @@
     .card {
       display: flex;
       align-items: center;
-      width: 100%;
-      max-width: 322px;
+      width: calc(100% - 13px);
       margin-left: 13px;
       height: 72px;
       box-shadow: 0px 4px 15px 0px $colorShadow_1;
@@ -154,6 +214,13 @@
           color: $colorPrimary_5;
         }
       }
+
+      @include styleResponsive("desktop") {
+        max-width: 322px;
+      }
+      @include styleResponsive("tablet") {
+        max-width: 440px;
+      }
     }
   }
 
@@ -174,11 +241,11 @@
     .card-container {
       flex-direction: column;
       gap: 25px;
-      width: fit-content;
-      margin: 0 auto;
 
       .card {
         gap: 27px;
+        margin: 0 auto;
+
       }
     }
   }
@@ -208,65 +275,90 @@
       column-gap: 100px;
       row-gap: 50px;
   
-      .card {
+      .card-wrapper {
+        position: relative;
+        display: flex;
+        flex-direction: column;
         max-width: 490px;
         max-height: 251px;
         margin: 0 auto;
         border-radius: 15px;
         overflow: hidden;
-  
-        .image-container {
-          position: relative;
-          height: 174px;
-          overflow: hidden;
-  
-          img {
-            width: 498.65px;
-            object-fit: cover;
+
+        .card {
+          .image-container {
+            position: relative;
+            height: 174px;
+            overflow: hidden;
+    
+            img {
+              width: 498.65px;
+              object-fit: cover;
+            }
+            .new-tag {
+              position: absolute;
+              display: flex;
+              top: 13px;
+              right: 18px;
+              width: 80px;
+              padding: 6px 0;
+              border-radius: 2px;
+              justify-content: center;
+              background-color: $colorPrimary_1;
+              font-weight: 500;
+              @include styleP("small", $colorPrimary_2);
+            }
           }
-          .new-tag {
-            position: absolute;
+    
+          .caption {
+            align-items: center;
+            background-color: white;
+            height: 80px;
+            padding: 0 18px;
             display: flex;
-            top: 13px;
-            right: 18px;
-            width: 80px;
-            padding: 6px 0;
-            border-radius: 2px;
-            justify-content: center;
-            background-color: $colorPrimary_1;
-            font-weight: 500;
-            @include styleP("small", $colorPrimary_2);
+            justify-content: space-between;
+    
+            .text-container {
+              display: flex;
+              flex-direction: column;
+              gap: 5px;
+    
+              .title {
+                line-height: 21px;
+                font-weight: 700;
+                @include styleH("h4");
+              }
+    
+              .restaurant-location {
+                font-weight: 300;
+                line-height: 20px;
+                @include styleP("medium");
+              }
+            }
           }
         }
-  
-        .caption {
-          align-items: center;
-          background-color: white;
-          height: 80px;
-          padding: 0 18px;
+
+        .heart {
           display: flex;
-          justify-content: space-between;
-  
-          .text-container {
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-  
-            .title {
-              line-height: 21px;
-              font-weight: 700;
-              @include styleH("h4");
-            }
-  
-            .restaurant-location {
-              font-weight: 300;
-              line-height: 20px;
-              @include styleP("medium");
-            }
+          position: absolute;
+          bottom: 15px;
+          right: 15px;
+          z-index: 200;
+          cursor: pointer;
+          
+          input {
+            display: none;
           }
   
-          i {
-            cursor: pointer;
+          &:hover {
+            i {
+              font-weight: bold;
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent; 
+              -moz-background-clip: text;
+              -moz-text-fill-color: transparent;
+              background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+            }
           }
         }
       }
